--- a/index.html
+++ b/index.html
@@ -11,8 +11,8 @@
 <body>
     <div class="title">
       <h1 class="main-title">Thank you</h1>
-      <br><br>
-      <span class="thin">for being part of the journey</span>
+      <br>
+      <span class="thin">for being part of this journey</span>
     </div>
     <div class="footer">
       <span>Richard Neil B. Punzalan</span>
